<resources>
    <string name="app_name">AndroidIntent</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="caption_send">Send Data</string>
    <string name="caption_send_back">Send Back</string>
    <string name="hint_send">Type Here</string>
    <string name="btn_send">Send</string>

    <string name="btn_send_act_2">Send to Second Activity</string>
    <string name="btn_send_act_3">Send to Third Activity</string>

</resources>
