<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/caption_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/txtInputData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="8dp"
        android:hint="@string/hint_send"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnSend1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_act_2"
        android:layout_below="@+id/txtInputData"
        android:layout_alignParentLeft="true"
        android:padding="8dp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSend2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_act_3"
        android:layout_below="@+id/btnSend1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
